Cv version1 AI works fine